--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ name = "de_datalake_bulletin_dataload"
 requires-python = ">=3.10,<3.15"
 version = "0.1.0"
 dependencies = [
-    "asyncio>=4.0.0",
     "boto3>=1.42.33",
     "dagster==1.12.10",
-    "httpx>=0.28.1",
+    "dagster-postgres>=0.28.10",
+    "httpx[http2]>=0.28.1",
     "polars>=1.37.1",
     "pydantic>=2.12.5",
     "tenacity>=9.1.2",
