--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "de_datalake_bulletin_dataload"
 requires-python = ">=3.10,<3.15"
-version = "0.1.0"
+version = "1.1.0"
 dependencies = [
     "boto3>=1.42.33",
     "dagster==1.12.10",
@@ -16,6 +16,7 @@ dependencies = [
 dev = [
     "dagster-webserver",
     "dagster-dg-cli",
+    "ruff>=0.14.14",
 ]
 
 [build-system]
