--- a/config/config.json
+++ b/config/config.json
@@ -4,12 +4,19 @@
         "pages": "pages?",
         "media": "media?"
     },
-    "pagination": "per_page=100&page=",
-    "sensor_param": "?per_page=1&page=1&_fields=modified&orderby=modified&order=desc",
+    "initial_pagination_param": "?per_page=100&page=",
+    "loop_pagination_param": "&per_page=100&page=",
+    "default_baseline_datetime": "2000-01-01T00:00:00",
+    "latest_modified_param": "?per_page=1&page=1&_fields=modified&orderby=modified&order=desc",
+    "idempotency_param": "&modified_after=",
+    "partition_date_prefix": "load_date=",
+    "partition_time_prefix": "load_time=",
+    "parquet_file_extension": "*.parquet",
     "http_client": {
         "max_connections": 50,
         "max_keepalive_connections": 20,
         "connect_timeout": 10.0,
-        "total_timeout": 30.0
+        "total_timeout": 30.0,
+        "http2": true
     }
 }
