--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -8,10 +8,9 @@ metadata:
     component: code-location
 type: Opaque
 stringData:
-  # AWS S3 Credentials
+  # AWS S3 Credentials (Required for S3 uploads)
   # NOTE: Replace placeholder values before deploying to cluster
-  # These are required only if upload_to_s3=true in asset materialization
-  AWS_S3_BUCKET_NAME: "PLACEHOLDER_REPLACE_IN_CLUSTER"
+  # Bucket name and region are configured in config.json
+  # Only credentials are stored as secrets
   AWS_ACCESS_KEY_ID: "PLACEHOLDER_REPLACE_IN_CLUSTER"
   AWS_SECRET_ACCESS_KEY: "PLACEHOLDER_REPLACE_IN_CLUSTER"
-  AWS_REGION_NAME: "us-east-1"
