--- a/config/config.json
+++ b/config/config.json
@@ -7,13 +7,9 @@
     "initial_pagination_param": "?per_page=100&page=",
     "loop_pagination_param": "&per_page=100&page=",
     "default_baseline_datetime": "2000-01-01T00:00:00",
-    "latest_modified_param": "?per_page=1&page=1&_fields=modified&orderby=modified&order=desc",
     "idempotency_param": "&modified_after=",
-    "parquet_top_folder_path": "/bulletin_raw/",
-    "parquet_file_name_prefix": "de_bulletin_data",
     "partition_date_prefix": "load_date=",
     "partition_time_prefix": "load_time=",
-    "parquet_file_extension": "*.parquet",
     "http_client": {
         "max_connections": 50,
         "max_keepalive_connections": 20,
@@ -22,8 +18,7 @@
         "http2": true
     },
     "paths": {
-        "config_path": "/app/config/config.json",
-        "parquet_export_folder_path": "/bulletin_raw/",
+        "parquet_export_folder_path": "bulletin_raw/",
         "parquet_file_name": "de_bulletin_data.parquet",
         "parquet_compression": "SNAPPY"
     },
